hphp/test/zend/good/ext-standard-network/gethostbyname_error006.php
<?php
	var_dump(gethostbyname(".toto.toto.toto"));
?>