hphp/test/zend/bad/ext/standard/tests/network/gethostbyname_error004.php
<?php
	$ip = gethostbyname("www.php.net");
	var_dump((bool) ip2long($ip));
?>